# minimacplus

./: README.md
firmware/: custom_build.py  flashhd.sh  flashrom.sh  ide.sh  partitions.csv  platformio.ini  sdkconfig  sdkconfig.minimac
firmware/components/mipidisp/: CMakeLists.txt  mipi.c
firmware/components/tme/: CMakeLists.txt  Makefile  component.mk  emu.c  emu.h  hd.h  hexdump.h  m68kconf.h  mouse.c  mouse.h  ncr.c  scc.c  scc.h  tmeconfig.h  via.c  via.h
firmware/components/tme-esp32/: mipi_lcd.c
firmware/components/tme/musashi/: m68kops_pre.c
firmware/components/tme/network/: ethertalk.c  localtalk.c  sniff.c
firmware/components/tme/sdl/: disp.c  hd.c  main.c
firmware/data/: default_settings.json  index.htm  style.css
firmware/sdl_sim/: Makefile  disp.c  hd.c  main.c
firmware/src/: CMakeLists.txt  adns9500.c  disp.h  emu.c  emu.h  hd.c  hd.h  hexdump.c  iwm.c  iwm.h  linker_fragment_file.lf  localtalk.h  m68kconf.h  macrtc.c  macrtc.h  main.c  mipi_lcd.c  mouse.c  mouse.h  scc.c  scc.h  scsi.c  scsi.h  snd.c  snd.h  tmeconfig.h  via.c
firmware/src/esp/: adns9500.c  disp.c  hd.c  main.c  mipi.c  mipi_dsi.c  mipi_dsi.h  mipi_lcd.c  oled.c  oled.h  paw3205.c  snd.c  static_ws.c  static_ws.h
firmware/src/esp/wifi/: wifi.c  wifi.h
firmware/src/musashi/: Makefile
pcb/: bom.txt
